--- a/07-restserver/public/index.html
+++ b/07-restserver/public/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso Denegado</title>
+    <title>Google SignIn</title>
 </head>
 <body>
-    <h1>Acceso Denegado</h1>
-
+    <h1>Google SignIn</h1>
+    <hr>
+    <div id="g_id_onload" data-client_id="1078359161617-kumh9ddcuqpqngj3gm93fnnguoubiddl.apps.googleusercontent.com"
+        data-auto_prompt="false" data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
+        data-shape="rectangular" data-logo_alignment="left">
+    </div>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        function handleCredentialResponse(response) {
+            const body = { id_token: response.credential }
+            fetch('http://localhost:8080/api/auth/google', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(body)
+            })
+                .then(resp => resp.json())
+                .then(resp => {
+                    console.log(resp)
+                })
+                .catch(err => console.log(err))
+            console.log('id Token', response.credential);
+        }
+    </script>
 </body>
 </html>
