--- a/07-restserver/public/index.html
+++ b/07-restserver/public/index.html
@@ -15,6 +15,9 @@
     <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
         data-shape="rectangular" data-logo_alignment="left">
     </div>
+    <button id="google_signout">
+        Signout
+    </button>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
         function handleCredentialResponse(response) {
@@ -29,10 +32,28 @@
                 .then(resp => resp.json())
                 .then(resp => {
                     console.log(resp)
+                    console.log(resp.usuario.correo)
+                    localStorage.setItem('email', resp.usuario.correo)
                 })
                 .catch(err => console.log(err))
             console.log('id Token', response.credential);
         }
+
+    const button = document.getElementById('google_signout')
+    console.log("Entro 1?");
+    button.onclick = () => {
+
+        google.accounts.id.disableAutoSelect()
+        console.log("Entro 2?");
+        google.accounts.id.revoke(localStorage.getItem('email'), done => {
+            localStorage.clear()
+            location.reload()
+
+        })
+    }
+
+
+
     </script>
 </body>
 </html>
